# GeomPrimitiveBackend

./: .gitmodules  CMakeLists.txt
include/: geom_prim.hpp  geom_prim_back.hpp  geom_prim_tools.hpp  image.hpp  print_screen.hpp
source/: geom_prim.cpp  geom_prim_back.cpp  geom_prim_tools.cpp  image.cpp  print_screen.cpp
